fix horiz. overflow on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -375,11 +375,24 @@ button:hover{
     font-family: "Major Mono Display", monospace;
     font-weight: 400;
     font-style: normal;
-    font-size: 2em;
+    font-size: 1.3em;
   }
 
   .title {
-    font-size: 2.5em;
+    font-size: 1.3em;
+  }
+
+  .portfolio-item {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid black;
+    background-color: yellow;
+    padding: 10px;
+    box-sizing: border-box;
+    max-width: 75%;
   }
   
 }
@@ -398,6 +411,7 @@ button:hover{
   background-color: yellow;
   padding: 10px;
   box-sizing: border-box;
+  max-width: 95%;
 }
 
 .navigation {
@@ -420,7 +434,7 @@ button:hover{
   }
 }
 
-@media screen and (max-width: 999px) {
+@media screen and (min-width: 999px) {
   .portfolio-item {
     width: 100%; /* Full width on small screens */
   }
